yaml/firefox-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox
spec:
  selector:
    matchLabels:
      app: firefox
  template:
    metadata:
      labels:
        app: firefox
    spec:
      containers:
      - name: firefox
        image: lscr.io/linuxserver/firefox:latest
        ports:
        - containerPort: 3001
