yaml/nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
    - name: nginx
      image: nginx:trixie-perl
      ports:
        - containerPort: 80
      volumeMounts:
        - name: nginx-storage
          mountPath: /usr/share/nginx/html

  volumes:
    - name: nginx-storage
      persistentVolumeClaim:
        claimName: nginx-pvc
